--- a/src/components/Lives.css
+++ b/src/components/Lives.css
@@ -11,7 +11,8 @@
 }
 
 .heart {
-    height: 20px;
-    width: 20px;
+    height: 50px;
+    width: 50px;
     object-fit: cover;
+    margin: 0 5px;
 }
