--- a/src/components/Question.css
+++ b/src/components/Question.css
@@ -1,5 +1,5 @@
 main {
-    height: 550px;
+    height: 450px;
     width: 700px;
     background: rgb(220, 228, 230);
     position: fixed;
@@ -34,6 +34,10 @@ main {
     font-size: 1.2rem;
     padding: 15px;
     margin: 15px;
+
+    &:hover {
+        background: rgba(0, 128, 255, 0.176);
+    }
 }
 
 .next {
